--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # Base URL of the NiFi instance REST API
 # Example: NIFI_BASE_URL="http://localhost:8080/nifi-api"
 NIFI_BASE_URL="https://localhost:8443/nifi-api"
-
+NIFI_MCP_SSL_VERIFY=False
 # Optional: Default NiFi credentials if not provided by the MCP client
 # These are used as a fallback or for server-to-server scenarios if applicable.
 # For user-driven interactions, credentials should ideally come from the MCP client.
